--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script type="module" src="src/index.tsx"></script>
     <!--
       This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      If you open it directly in the browser, you will see an empty pages.
 
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
